Fix page overflow caused by footnote links

--- a/assets/scss/tailwind.scss
+++ b/assets/scss/tailwind.scss
@@ -65,6 +65,10 @@ main.dark {
         margin-bottom: 0 !important;
     }
 
+    .footnotes {
+        @apply break-words;
+    }
+
     .footnotes > ol > li::before {
         content: "";
         position: absolute;
